--- a/src/css/inc/reset.styl
+++ b/src/css/inc/reset.styl
@@ -70,6 +70,7 @@ button,input,select,textarea
   font-style inherit
   font-weight inherit
   min-height 1.5em
+  box-shadow none
 
 code,kbd,pre,samp
   font-family monospace, monospace
